# textworld

./: .gitignore  README.md  pyproject.toml
examples/: generate_story.py  run_scenario.py  story_starter.py
scripts/: the_council.py  try_fix_json.py
tests/: test_entity.py
tests/ai/: test_ollama.py
textworld/: entity.py  events.py  io.py  logs.py  main.py  models.py  templating.py
textworld/assets/: evil_cookies.json  jazz_bar.json  the_bot.json  the_party.json
textworld/assets/stories/: canine_carnage.json
textworld/assets/stories/golden_days/: outline.json  scenes.json
textworld/assets/stories/max/: outline.json
textworld/models/: __init__.py  actors.py  entity.py  events.py  location.py  responses.py  scenario.py  stories.py
textworld/scripts/: scenario.py  story.py
textworld/stories/: generate.py  models.py
textworld/templates/stories/: characters.j2  locations.j2  scene.novelization.j2  scenes.j2
textworld/templates/system_prompts/: base.j2  conversation.continue.j2  conversation.starter.j2  conversation.summary.j2  scenario.create.j2
textworld/templates/system_prompts/_partials/: response_model.j2
textworld/tui/: app.py  utils.py
textworld/tui/components/: locationtabcontent.py
textworld/tui/screens/: game.py  gamemenu.py  mainmenu.py  scenarioloader.py
