[tool.poetry]
name = "textworld"
version = "1.0.1"
description = ""
authors = ["Tyler Evans <tyler@poorlythoughtout.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
relative-world = {git = "https://github.com/relative-world/relative-world.git"}
ollama = "^0.4.7"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
rich = "^13.9.4"
jinja2 = "^3.1.5"
relative-world-ollama = {git = "https://github.com/relative-world/relative-world-ollama.git"}
python-json-logger = "^3.2.1"
orjson = "^3.10.15"
textual = "^2.1.0"
polyfactory = "^2.19.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
ruff = "^0.9.7"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
